--- a/escom-bpm-web/src/main/webapp/view/common/drag-drop-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/drag-drop-dlg.xhtml
@@ -7,13 +7,13 @@
         <p:commandButton value="#{bundle.Move}" process="@this" 
                          styleClass="ui-confirmdialog-yes" icon="ui-icon-check" 
                          actionListener="#{_bean.dropItemToNotActual()}" 
-                         update="westFRM mainFRM #{_updates}"
+                         update="westFRM #{_updates}"
                          onclick="PF('MoveItemToNotActual').hide();"
                          oncomplete="initDND()">
         </p:commandButton>
         <p:commandButton value="#{bundle.Cancel}" process="@this" 
                          styleClass="ui-confirmdialog-no"  icon="ui-icon-close" 
-                         update="mainFRM westFRM"
+                         update="#{_updates} westFRM"
                          onclick="PF('MoveItemToNotActual').hide();"
                          oncomplete="initDND()"/>
     </p:confirmDialog>
@@ -22,13 +22,13 @@
         <p:commandButton value="#{bundle.Move}" process="@this" 
                          styleClass="ui-confirmdialog-yes" icon="ui-icon-check" 
                          actionListener="#{_bean.dropItemToTrash()}" 
-                         update="westFRM mainFRM #{_updates}"
+                         update="westFRM #{_updates}"
                          onclick="PF('MoveItemToTrashDlg').hide();"
                          oncomplete="initDND()">
         </p:commandButton>
         <p:commandButton value="#{bundle.Cancel}" process="@this" 
                          styleClass="ui-confirmdialog-no"  icon="ui-icon-close" 
-                         update="mainFRM westFRM"
+                         update="#{_updates} westFRM"
                          onclick="PF('MoveItemToTrashDlg').hide();"
                          oncomplete="initDND()"/>
     </p:confirmDialog>
@@ -37,13 +37,13 @@
         <p:commandButton value="#{bundle.Move}" process="@this" 
                          styleClass="ui-confirmdialog-yes" icon="ui-icon-check" 
                          actionListener="#{_bean.moveGroupToGroup()}" 
-                         update="westFRM mainFRM #{_updates}"
+                         update="westFRM #{_updates}"
                          onclick="PF('MoveTreeDlg').hide();"
                          oncomplete="initDND()">
         </p:commandButton>
         <p:commandButton value="#{bundle.Cancel}" process="@this" 
                          styleClass="ui-confirmdialog-no"  icon="ui-icon-close" 
-                         update="mainFRM westFRM"
+                         update="#{_updates} westFRM"
                          onclick="PF('MoveTreeDlg').hide();"
                          oncomplete="initDND()"/>
     </p:confirmDialog>
@@ -52,13 +52,13 @@
         <p:commandButton value="#{bundle.Add}" process="@this" 
                          styleClass="ui-confirmdialog-yes" icon="ui-icon-check" 
                          actionListener="#{_bean.addItemToGroup()}" 
-                         update="westFRM mainFRM #{_updates}"
+                         update="westFRM #{_updates}"
                          onclick="PF('AddTblDlg').hide();"
                          oncomplete="initDND();">
         </p:commandButton>
         <p:commandButton value="#{bundle.Cancel}" process="@this" 
                          styleClass="ui-confirmdialog-no"  icon="ui-icon-close" 
-                         update="mainFRM westFRM"
+                         update="#{_updates} westFRM"
                          onclick="PF('AddTblDlg').hide();"
                          oncomplete="initDND()"/>
     </p:confirmDialog>
@@ -67,13 +67,13 @@
         <p:commandButton value="#{bundle.Move}" process="@this"
                          styleClass="ui-confirmdialog-yes" icon="ui-icon-check"
                          actionListener="#{_bean.moveItemToGroup()}"
-                         update="mainFRM westFRM #{_updates}"
+                         update="westFRM #{_updates}"
                          onclick="PF('MoveTblDlg').hide();"
                          oncomplete="initDND()">
         </p:commandButton>
         <p:commandButton value="#{bundle.Cancel}" process="@this" 
                          styleClass="ui-confirmdialog-no" icon="ui-icon-close"
-                         update="mainFRM"
+                         update="#{_updates}"
                          onclick="PF('MoveTblDlg').hide();"
                          oncomplete="initDND()"/>
     </p:confirmDialog>
@@ -81,13 +81,13 @@
             <p:commandButton value="#{bundle.CreateProcess}" process="@this"
                              styleClass="ui-confirmdialog-yes" icon="ui-icon-check"
                              actionListener="#{_bean.createProcess()}"
-                             update="mainFRM #{_updates}"
+                             update="#{_updates}"
                              onclick="PF('CreateProcessDlg').hide();"
                              oncomplete="initDND()">
             </p:commandButton>
             <p:commandButton value="#{bundle.Cancel}" process="@this" 
                              styleClass="ui-confirmdialog-no" icon="ui-icon-close"
-                             update="mainFRM"
+                             update="#{_updates}"
                              onclick="PF('CreateProcessDlg').hide();"
                              oncomplete="initDND()"/>
     </p:confirmDialog>
